/*
 * Copyright (c) 2012-2014 Alex de Kruijff
 * Copyright (c) 2014-2015 Specialisterren
 *
 * This program is free software; you can redistribute it and/or
 * modify it under the terms of the GNU Affero General Public License
 * as published by the Free Software Foundation; either version 3
 * of the License, or (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program; if not, write to the Free Software
 * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 */
package org.mazarineblue.datasources;

import java.util.HashMap;
import java.util.Map;
import java.util.Set;
import org.mazarineblue.datasources.exceptions.HeaderMissing;

/**
 *
 * @author Alex de Kruijff {@literal <alex.de.kruijff@MazarineBlue.org>}
 */
public abstract class MatrixSource
        extends AbstractSource {

    private Map<String, Integer> header;

    protected MatrixSource(String sourceIdentifier) {
        super(sourceIdentifier);
        this.header = null;
    }

    public void setHeader(Map<String, Integer> header) {
        this.header = new HashMap(header);
    }

    public boolean hasHeaders() {
        return header != null;
    }

    @Override
    public Object getData(String column) {
        if (header == null)
            throw new HeaderMissing();
        Integer index = header.get(column);
        return index == null ? null : getData(index);
    }

    @Override
    public boolean setData(String column, Object value) {
        if (header == null)
            throw new HeaderMissing();
        Integer index = header.get(column);
        return index == null ? false : setData(index, value);
    }

    @Override
    public Set<String> getColumns() {
        if (header == null)
            throw new HeaderMissing();
        return header.keySet();
    }
}
