/*
 * Copyright (c) 2012-2014 Alex de Kruijff
 * Copyright (c) 2014-2015 Specialisterren
 *
 * This program is free software; you can redistribute it and/or
 * modify it under the terms of the GNU Affero General Public License
 * as published by the Free Software Foundation; either version 3
 * of the License, or (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program; if not, write to the Free Software
 * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 */
package org.mazarineblue.datasources;

/**
 *
 * @author Alex de Kruijff {@literal <alex.de.kruijff@MazarineBlue.org>}
 */
public class ScopedSource
        extends BackedSource {

    public ScopedSource() {
    }

    public ScopedSource(DataSource source) {
        super(source);
    }

    @Override
    public void push(DataSource source) {
        super.push(source);
    }

    @Override
    public boolean remove(DataSource source) {
        return super.remove(source);
    }

    @Override
    public final DataSource pop() {
        return super.pop();
    }

    @Override
    @SuppressWarnings("unchecked")
    public boolean hasNext() {
        return super.isEmpty() ? false : stream().findFirst().get().hasNext();
    }
}
